dgm-lib v1.9.0
 * `dgm::Animation` no longer depends on `sf::Sprite`
	* Use `dgm::Animation::getCurrentFrame()` instead
 * Bumped nlohmann json to v3.11.2
	* This resolves a warning about `<ciso646>` being removed in C++20

dgm-lib v1.8.2
 * Added basic collision detection between VisionCone and Point
 * Fixed dgm::Controller::getValue returning 1.f when mouse button wasn't bound to given input code
	* NOTE: sf::Mouse::isButtonPressed(sf::Mouse::ButtonCount) can return true for whatever reason
 * Fixed dgm::Controller::getValue returning 1.f when keyboard key wasn't bound to given input code
	* NOTE: sf::Keybard::isKeyPressed(sf::Keyboard::Unknown) can return true for whatever reason
 * Fixed missing virtual destructor on dgm::AbstractController

dgm-lib v1.8.1
 * Removed dshlibs includes from final package

dgm-lib v1.8.0
 * Removed dsh::Config dependency in dgm::Window
	* Replaced with dgm::WindowSettings
 * Removed dsh::LevelD dependency in dgm::Mesh, dgm::TileSet and dgm::Path
	* This only affected overloaded convenience constructors

dgm-lib v1.7.0
 * **IMPORTANT:** dgm-lib is now compiled with VS22 (version 17.x), toolset v143. Release artifact naming had changed to reflect this.
 * Added dgm::VisionCone object along with collision detection method between cones and circles
	* Supposed to be used for AI vision
 * dgm::AnimationStates now work by their own instead of std::shared_ptr. dgm::ResourceManager returns references to them and dgm::Animation accepts a const reference to use them so it is still possible to reuse the same AnimationStates object between multiple Animation objects without ever making unneeded copies.
 * Fixed dgm::Controller::bindInput throwing assert then trying to bind distinct inputs
 * Fixed missing virtual destructors on interface classes
	* Compiler now issues an error when that happens
 * Fixed missing includes to LoaderInterface and JsonLoader in dgm.hpp
 * Fixed dgm::Animation crashing when default constructor was invoked