@@ -1,3 +1,6 @@
+dgm-lib v1.x.x
+ * `dgm::ResourceManager` can now load `dgm::Clip` from JSON files
+
 dgm-lib v1.9.0
  * `dgm::Animation` no longer depends on `sf::Sprite`
 	* Use `dgm::Animation::getCurrentFrame()` instead
